fixed URL Encode and add new CommonUtil.random(min,max) feature